--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="..//qualquer/css/style.css">
 </head>
 <body>
     <nav>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-
+        <a href="">vou matar o javascripto </a>
+        <a href="">rusbe </a>
+        <a href="">chloe</a>
+        <a href="">olokinho meo</a>
 
     </nav>
 </body>
-</html>
+</html
