criar q estilizar section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
         <a href="">olokinho meo</a>
 
     </nav>
-    <header></header>
+    <header><h1>memes br</h1></header>
+    <section>
+        <img src="imagens/javascripto.jpg" alt="meme do javascripto">
+            <p>Não obstante, o início da atividade geral de formação de atitudes possibilita uma melhor visão global das novas proposições.</p>
+            
+        <img src="imagens/07KQmoiT_400x400.jpg" alt="rusbe">
+            <p>Neste sentido, a consulta aos diversos militantes facilita a criação das formas de ação.</p>
+
+        <img src="imagens/7ghzpm83h4_66e2uy1zpc_file.jpg" alt="chloe">  
+            <p>Por conseguinte, o fenômeno da Internet afeta positivamente a correta previsão das diversas correntes de pensamento.</p>  
+
+        <img src="imagens/olokinho-meu-49720611.png" alt="olokinho">
+            <p>A certificação de metodologias que nos auxiliam a lidar com a estrutura atual da organização cumpre um papel essencial na formulação de alternativas às soluções ortodoxas.</p>
+
+    </section>
 </body>
 </html
